--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
   <body>
     <nav>
-      <div class="container">
+      <div class="container h-75">
         <div class="row">
           <div class="col-xs-6">
-            <div class="content">
-               <!-- logo -->
+            <div class="content logo">
+               START BOOTSTRAP
             </div>
           </div>
-          <div class="col-xs-6">
-            <div class="content">
-              <!-- bottone menu -->
+          <div class="col-xs-6 ">
+            <div class="content p-nav">
+              <div class="but-green txt-white menu f-dx">
+                MENU<i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
             </div>
           </div>
         </div>
